2007-08-15  Luca Bruno  <lethalman88@gmail.com>

	* tests/testscheduler.c: fixed blocks to use the right number of arguments

	* plugins/gtk/st/GtkTextView.st: added

	* SConstruct: rootdir option has been added
	support for documentation installation/clean has been added

2007-08-14  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/st/GtkTextView.st: added

	* plugins/gtk/st/GtkTextMark.st: added

	* plugins/gtk/st/GtkTextTag.st: added

	* plugins/gtk/st/GtkTextTagTable.st: added

	* st/kernel/Object.st (perform methods): check argument count

	* syx/syx-error.h (syx_signal_create_context): added

	* syx/syx-parser.c (_syx_parser_parse_block_message_pattern): save argumentCount
	(_syx_parser_parse_method_message_pattern): save argumentCount

	* syx/syx-object.h (SYX_CODE_ARGUMENT_COUNT): instance variable added do CompiledCode

2007-08-13  Luca Bruno  <lethalman88@gmail.com>

	* makefile.vc (OBJS): missed new syx-signal.obj

	* st/kernel/FileStream.st (fileIn): handle scripting header

	* syx/syx-utils.c (syx_show_traceback): added

	* st/kernel/SystemSignal.st: added

	* syx/syx-signal.c: added

	* plugins/gtk/st/GtkTextIter.st: added

	* syx/syx-lexer.c: usage of pushed_back char has been fixed to build for PowerPC

2007-08-12  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.c: missed endianness compatibility for optimized blocks

	* st/kernel/SystemDictionary.st (haveBigEndianness): removed

	* src/main.c (_getopt_do): -c option has been added

	* st/kernel/SystemDictionary.st (continueStartup): a new variable has been added to specify if the startup sequence must continue after fileing in files

	* syx/syx-platform.h (SYX_PLUGIN_PATH): added

	* SConstruct: option 'plugindir' has been added which belongs by default to the machine-dependent directory $libdir/syx

2007-08-11  Luca Bruno  <lethalman88@gmail.com>

	* plugins/gtk/st/GtkTextBuffer.st: added but doesn't work yet because of other Gtk dependencies
